Set MACOSX_DEPLOYMENT_TARGET.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
         sudo xcode-select --switch /Library/Developer/CommandLineTools
         xcode-select -p
         clang --version
+        export MACOSX_DEPLOYMENT_TARGET="11.0"
         /bin/sh install.sh
         /bin/sh build-packages.sh
     - name: Run pkgsrc on Linux
