Set OSX_SDK_PATH in mk.conf.

--- a/mk.conf
+++ b/mk.conf
@@ -11,3 +11,8 @@ PREFER_NATIVE=			clang gcc
 USE_BUILTIN.dl=			yes
 
 CFLAGS+=			-Wno-unused-command-line-argument
+
+.if ${OPSYS} == "Darwin"
+SDKROOT!=			xcrun --sdk macosx --show-sdk-path
+OSX_SDK_PATH=			${SDKROOT}
+.endif
